--- a/.gitignore
+++ b/.gitignore
@@ -260,3 +260,21 @@ paket-files/
 __pycache__/
 *.pyc
 /LR_4/sRender_Grid
+/Отчет/uf8_8nods.pdf
+/Отчет/uf8_4nods.pdf
+/Отчет/uf8_32nods.pdf
+/Отчет/uf8_16nods.pdf
+/Отчет/sf1_8nods.pdf
+/Отчет/sf1_4nods.pdf
+/Отчет/sf0_8nods.pdf
+/Отчет/sf0_4nods.pdf
+/Отчет/f7_4nods.pdf
+/Отчет/f7_128nods.pdf
+/Отчет/f1_128nods.pdf
+/Отчет/cf8_8nods.pdf
+/Отчет/cf8_4nods.pdf
+/Отчет/cf8_32nods.pdf
+/Отчет/cf8_16nods.pdf
+/LR_4/Results/fun8.txt
+/LR_4/Results/fun7.txt
+/LR_4/Results/fun0.txt
